# oncoteam

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Procfile  README.md  pyproject.toml  railway.toml
.github/workflows/: backup_funnel_audit.yml  backup_oncofiles_db.yml  ci.yml  deploy-landing.yml
dashboard/: .env.example  .gitignore  nuxt.config.ts  package.json  pnpm-lock.yaml  railway.toml  vitest.config.ts
dashboard/app/: app.vue  error.vue
dashboard/tests/: access-rights.test.ts  auth-audit.test.ts  silent-fallback-regression.test.ts
docs/: competitive-landscape.md  disaster_recovery.md  onboarding_email_minarikova_SK.txt  onboarding_email_minarikova_draft.md  research_cockpit.md
docs/incidents/: 2026-04-23-oncofiles-cascade.md  2026-04-24-cross-tenant-isolation-audit.md
landing/: Dockerfile  battle-card-onkoasist.md  i18n.js  index.html  linkedin-drafts.md  llms-full.txt  llms.txt  molekularny-profil-vysvetlenie.html  pravne-upozornenie.html  pred-navstevou-onkologa.html  railway.toml  robots.txt  sitemap.xml  sprava-lekarskych-dokumentov.html  style.css
scripts/: backup-turso.sh  backup_funnel_audit.py  backup_oncofiles_db.py  check_tenant_exempt.py  gcp_backup_setup.sh  migrate_funnel_to_two_lane.py  migrate_role_map_to_per_patient.py  red_team_probe.py
src/oncoteam/: __init__.py  activity_logger.py  agent_registry.py  api_admin.py  api_agents.py  api_funnel.py  api_oncopanel.py  api_research.py  api_webhooks.py  api_whatsapp.py  auth_provider.py  (+22 more)
tests/: conftest.py  test_activity_logger.py  test_agent_registry.py  test_api_assess_funnel.py  test_api_contracts.py  test_api_funnel.py  test_api_oncopanel.py  test_autonomous.py  test_autonomous_tasks_trace.py  test_breast_protocol.py  test_clinical_protocol.py  test_clinicaltrials_client.py  test_dashboard_api.py  test_dashboard_api_agent_config.py  test_dashboard_api_agents.py  test_dashboard_api_autonomous.py  test_dashboard_api_consistency.py  test_dashboard_api_cost.py  test_dashboard_api_cumulative_dose.py  test_dashboard_api_data_quality.py  test_dashboard_api_detail.py  test_dashboard_api_diagnostics.py  test_dashboard_api_documents.py  test_dashboard_api_family_update.py  test_dashboard_api_funnel_stages.py  test_dashboard_api_health_patients.py  test_dashboard_api_medications.py  test_dashboard_api_misc.py  test_dashboard_api_protocol.py  test_dashboard_api_protocol_cycles.py  test_dashboard_api_toxicity_labs.py  test_dashboard_api_voice.py  test_dashboard_api_weight.py  test_dashboard_api_whatsapp.py  test_dashboard_source.py  test_document_pipeline.py  test_document_pipeline_drain.py  test_e2e.py  test_eligibility.py  test_facts.py  (+21 more)
(+111 files in other folders)
