[project]
name = "oncoteam"
version = "0.46.0"
description = "AI-powered patient advocacy tool for cancer treatment — understand labs, ask the right questions, find clinical trials, never miss a thing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Peter Fusek", email = "peterfusek1980@gmail.com" },
]
keywords = [
    "cancer",
    "oncology",
    "patient-advocacy",
    "clinical-trials",
    "lab-analysis",
    "mcp",
    "ai",
    "treatment-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "anthropic==0.86.0",
    "apscheduler>=3.10.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "respx>=0.22.0",
]

[project.urls]
Homepage = "https://oncoteam.cloud"
Dashboard = "https://dashboard.oncoteam.cloud"
Repository = "https://github.com/peter-fusek/oncoteam"
Issues = "https://github.com/peter-fusek/oncoteam/issues"
Author = "https://www.linkedin.com/in/peterfusek/"
Company = "https://www.instarea.com"

[project.scripts]
oncoteam-mcp = "oncoteam.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
